--- a/toc.html
+++ b/toc.html
@@ -20,122 +20,12 @@
 
     <body>
         <div class="wrapper">
-            <nav id="sidebar" class="sidebar js-sidebar">
-                <div class="sidebar-content js-simplebar">
-                    <a class="sidebar-brand" href="#!">
-                        <span class="align-middle">
-                            <img id="sgapp-logo-img" src="./img/logo.png" alt="Shift Guide Logo" />
-                        </span>
-                    </a>
-
-                    <ul class="sidebar-nav">
-                        <li class="sidebar-header">
-                            Menu
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./home.html">
-                                <i class="align-middle" data-feather="home"></i> <span class="align-middle">Home</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./organizations.html">
-                                <i class="align-middle" data-feather="briefcase"></i> <span class="align-middle">Organizations</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./staffs.html">
-                                <i class="align-middle" data-feather="users"></i> <span class="align-middle">Staffs</span>
-                            </a>
-                        </li>
-                        
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./attendance.html">
-                                <i class="align-middle" data-feather="check-circle"></i> <span class="align-middle">Attendance</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./schedules.html">
-                                <i class="align-middle" data-feather="calendar"></i> <span class="align-middle">Schedules</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./availability.html">
-                                <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">Availability</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./swap-requests.html">
-                                <i class="align-middle" data-feather="refresh-ccw"></i> <span class="align-middle">Swap Requests</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./leave-requests.html">
-                                <i class="align-middle" data-feather="user-x"></i> <span class="align-middle">Leave Requests</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./job-level.html">
-                                <i class="align-middle" data-feather="layers"></i> <span class="align-middle">Job Level</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./job-positions.html">
-                                <i class="align-middle" data-feather="bar-chart"></i> <span class="align-middle">Job Positions</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item active">
-                            <a class="sidebar-link" href="./holiday.html">
-                                <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Holiday</span>
-                            </a>
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./cao.html">
-                                <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">CAO</span>
-                            </a>
-                        </li>
-
-
-                        <li class="sidebar-header">
-                            User
-                        </li>
-
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./index.php">
-                                <i class="align-middle" data-feather="log-out"></i> <span class="align-middle">Logout</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
+            
             <div class="main">
                 <nav class="navbar navbar-expand navbar-light navbar-bg">
-                    <a class="sidebar-toggle js-sidebar-toggle">
-                        <i class="hamburger align-self-center"></i>
-                    </a>
 
                     <div id="sgapp-page-header">
-                        <header>
-                            <h1 class="poppins-medium">
-                                Terms & Condition
-                            </h1>
-                        </header>
-                        <div>
-                            <p>
-                                Let's check updates
-                            </p>
-                        </div>
+                        <img id="sgapp-toc-header" alt="Logo" src="./img/logo.png" />
                     </div>
 
                     <div class="navbar-collapse collapse">
@@ -146,95 +36,6 @@
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
                                 </a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-icon dropdown-toggle" href="#" id="alertsDropdown" data-bs-toggle="dropdown">
-                                    <div class="position-relative">
-                                        <i class="align-middle" data-feather="bell"></i>
-                                        <span class="indicator">4</span>
-                                    </div>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0" aria-labelledby="alertsDropdown">
-                                    <div class="dropdown-menu-header">
-                                        4 New Notifications
-                                    </div>
-                                    <div class="list-group">
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-danger" data-feather="alert-circle"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">Update completed</div>
-                                                    <div class="text-muted small mt-1">Restart server 12 to complete the update.</div>
-                                                    <div class="text-muted small mt-1">30m ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-warning" data-feather="bell"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">Lorem ipsum</div>
-                                                    <div class="text-muted small mt-1">Aliquam ex eros, imperdiet vulputate hendrerit et.</div>
-                                                    <div class="text-muted small mt-1">2h ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-primary" data-feather="home"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">Login from 192.186.1.8</div>
-                                                    <div class="text-muted small mt-1">5h ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-success" data-feather="user-plus"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">New connection</div>
-                                                    <div class="text-muted small mt-1">Christina accepted your request.</div>
-                                                    <div class="text-muted small mt-1">14h ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="dropdown-menu-footer">
-                                        <a href="#" class="text-muted">Show all notifications</a>
-                                    </div>
-                                </div>
-                            </li>
-
-                            <li class="nav-item">
-                                <input id="main-search" type="search" class="form-control mt-1 mx-1" placeholder="Search">
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown">
-                                    <i class="align-middle" data-feather="settings"></i>
-                                </a>
-
-                                <a class="nav-link dropdown-toggle d-none d-sm-inline-block mx-2" href="#" data-bs-toggle="dropdown">
-                                    <img src="img/avatars/avatar-5.jpg" class="avatar img-fluid rounded-circle me-1" alt="Sadia Mim" />
-                                    <span class="text-dark">Sadia Mim</span>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-end">
-                                    <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
-                                    <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i> Analytics</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="index.html"><i class="align-middle me-1" data-feather="settings"></i> Settings & Privacy</a>
-                                    <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="help-circle"></i> Help Center</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="./index.php">Log out</a>
-                                </div>
                             </li>
                         </ul>
                     </div>
